k8s_servicemesh/11_visualization/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: frontend
spec:
  hosts:
      - frontend.training.svc.cluster.local
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: frontend.training.svc.cluster.local
